Assign correct _summary.

--- a/src/sample.html
+++ b/src/sample.html
@@ -46,6 +46,7 @@
   _Transaction.executeSql("insert into patients (id) values (null)", [], null, _DB_EXEC_ERROR);
   _Transaction.executeSql("insert into patients (id) values (null)", [], null, _DB_EXEC_ERROR);
   _Transaction.executeSql("insert into patients (id) values (null)", [], null, _DB_EXEC_ERROR);
+  _Transaction.executeSql("insert into patients (id) values (null)", [], null, _DB_EXEC_ERROR);
 
   _Transaction.executeSql("insert into staff (name) values (\"alist\")", [], null, _DB_EXEC_ERROR);
   _Transaction.executeSql("insert into staff (name) values (\"dburb\")", [], null, _DB_EXEC_ERROR);
